feat: detalle movimiento
