# swagger/swagger.json
@@ -15,6 +15,64 @@
     },
     "basePath": "/v1",
     "paths": {
+        "/movimientos/": {
+            "get": {
+                "tags": [
+                    "movimientos"
+                ],
+                "description": "get Movimientos",
+                "operationId": "MovimientosController.GetAll",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "query",
+                        "description": "Filter. e.g. col1:v1,col2:v2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "fields",
+                        "description": "Fields returned. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "sortby",
+                        "description": "Sorted-by fields. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "order",
+                        "description": "Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "limit",
+                        "description": "Limit the size of result set. Must be an integer",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "offset",
+                        "description": "Start position of result set. Must be an integer",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Movimientos"
+                        }
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/transaccion_movimientos/": {
             "post": {
                 "tags": [
@@ -131,7 +189,7 @@
         }
     },
     "definitions": {
-        "2163.0xc0005226f0.false": {
+        "2163.0xc000534de0.false": {
             "title": "false",
             "type": "object"
         },
@@ -165,6 +223,10 @@
                 }
             }
         },
+        "models.Movimientos": {
+            "title": "Movimientos",
+            "type": "object"
+        },
         "models.TransaccionMovimientos": {
             "title": "TransaccionMovimientos",
             "type": "object",
@@ -173,7 +235,7 @@
                     "type": "boolean"
                 },
                 "Comprobante": {
-                    "$ref": "#/definitions/2163.0xc0005226f0.false"
+                    "$ref": "#/definitions/2163.0xc000534de0.false"
                 },
                 "ConsecutivoId": {
                     "type": "integer",
@@ -202,6 +264,10 @@
         {
             "name": "transaccion_movimientos",
             "description": "TransaccionMovimientosController operations for TransaccionMovimientos\n"
+        },
+        {
+            "name": "movimientos",
+            "description": "MovimientosController operations for Movimientos\n"
         }
     ]
 }
